package lab3;

/**
 * Interface for calculating the area occupied by a game element.
 */
public interface CalcArea {
    /**
     * Calculates the area occupied by the element in conditional units.
     *
     * @return the area of the element.
     */
    double calculateArea();
}